Don't make tokens required on user objects; update Google OAuth URL endpoint name and security
